crates/wx-compiler/src/codegen/snapshots/wx_compiler__codegen__tests__address_of_wat.snap
---
source: crates/wx-compiler/src/codegen/tests.rs
expression: "wasmprinter::print_bytes(&case.bytecode).unwrap()"
---
(module
  (type (;0;) (func (param i32 i32) (result i32)))
  (type (;1;) (func (param i32) (result i32)))
  (memory (;0;) 1)
  (export "heap" (memory 0))
  (export "elem_ptr" (func 0))
  (export "x_addr" (func 1))
  (export "y_addr" (func 2))
  (func (;0;) (type 0) (param i32 i32) (result i32)
    local.get 0
    local.get 1
    i32.const 2
    i32.shl
    i32.add
  )
  (func (;1;) (type 1) (param i32) (result i32)
    local.get 0
  )
  (func (;2;) (type 1) (param i32) (result i32)
    local.get 0
    i32.const 4
    i32.add
  )
)
