crates/wx-compiler/src/codegen/snapshots/wx_compiler__codegen__tests__check_wad_magic_wat.snap
---
source: crates/wx-compiler/src/codegen/tests.rs
expression: "wasmprinter::print_bytes(&case.bytecode).unwrap()"
---
(module
  (type (;0;) (func (param i32 i32) (result i32)))
  (memory (;0;) 1)
  (export "check_wad_magic" (func 0))
  (func (;0;) (type 0) (param i32 i32) (result i32)
    (local i32 i32 i32 i32)
    local.get 0
    i32.load8_u
    local.set 2
    local.get 0
    i32.load8_u offset=1
    local.set 3
    local.get 0
    i32.load8_u offset=2
    local.set 4
    local.get 0
    i32.load8_u offset=3
    local.set 5
    local.get 2
    i32.const 73
    i32.eq
    local.get 3
    i32.const 87
    i32.eq
    i32.and
    local.get 4
    i32.const 65
    i32.eq
    i32.and
    local.get 5
    i32.const 68
    i32.eq
    i32.and
  )
)
