crates/wx-compiler/src/codegen/snapshots/wx_compiler__codegen__tests__constant_index_offset_folding_wat.snap
---
source: crates/wx-compiler/src/codegen/tests.rs
expression: "wasmprinter::print_bytes(&case.bytecode).unwrap()"
---
(module
  (type (;0;) (func (result i32)))
  (type (;1;) (func (param i32 i32) (result i32)))
  (memory (;0;) 1)
  (export "get_arr" (func 0))
  (export "get_slice" (func 1))
  (func (;0;) (type 0) (result i32)
    (local i32)
    i32.const 0
    i32.load offset=8
    local.tee 0
  )
  (func (;1;) (type 1) (param i32 i32) (result i32)
    (local i32)
    local.get 0
    i32.load offset=12
    local.tee 2
  )
  (data (;0;) (i32.const 0) "\0a\00\00\00\14\00\00\00\1e\00\00\00(\00\00\00")
)
