crates/wx-compiler/src/codegen/snapshots/wx_compiler__codegen__tests__global_init_f64_wat.snap
---
source: crates/wx-compiler/src/codegen/tests.rs
expression: "wasmprinter::print_bytes(&case.bytecode).unwrap()"
---
(module
  (type (;0;) (func (result f64)))
  (type (;1;) (func))
  (global (;0;) (mut f64) f64.const 0x0p+0 (;=0;))
  (export "get" (func 0))
  (start 1)
  (func (;0;) (type 0) (result f64)
    (local f64)
    global.get 0
    local.set 0
    local.get 0
  )
  (func (;1;) (type 1)
    f64.const 0x1p+0 (;=1;)
    f64.const 0x1.4p+1 (;=2.5;)
    f64.add
    global.set 0
  )
)
