crates/wx-compiler/src/codegen/snapshots/wx_compiler__codegen__tests__globals_wat.snap
---
source: crates/wx-compiler/src/codegen/tests.rs
expression: "wasmprinter::print_bytes(&case.bytecode).unwrap()"
---
(module
  (type (;0;) (func (result i32)))
  (global (;0;) (mut i32) i32.const 0)
  (export "increment" (func 0))
  (func (;0;) (type 0) (result i32)
    (local i32 i32)
    global.get 0
    local.set 0
    local.get 0
    i32.const 1
    i32.add
    global.set 0
    global.get 0
    local.set 1
    local.get 1
  )
)
