crates/wx-compiler/src/codegen/snapshots/wx_compiler__codegen__tests__inline_expansion_wat.snap
---
source: crates/wx-compiler/src/codegen/tests.rs
expression: "wasmprinter::print_bytes(&case.bytecode).unwrap()"
---
(module
  (type (;0;) (func (param i32) (result i32)))
  (export "quad" (func 0))
  (func (;0;) (type 0) (param i32) (result i32)
    local.get 0
    i32.const 2
    i32.mul
    i32.const 2
    i32.mul
    return
  )
)
