crates/wx-compiler/src/codegen/snapshots/wx_compiler__codegen__tests__non_inline_call_wat.snap
---
source: crates/wx-compiler/src/codegen/tests.rs
expression: "wasmprinter::print_bytes(&case.bytecode).unwrap()"
---
(module
  (type (;0;) (func (param i32) (result i32)))
  (export "apply_twice" (func 1))
  (func (;0;) (type 0) (param i32) (result i32)
    local.get 0
    i32.const 1
    i32.shl
  )
  (func (;1;) (type 0) (param i32) (result i32)
    (local i32 i32)
    local.get 0
    call 0
    local.set 1
    local.get 1
    call 0
    local.set 2
    local.get 2
  )
)
